src/test/ui/suggestions/attribute-typos.stderr
error[E0658]: The attribute `rustc_err` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/attribute-typos.rs:7:3
   |
LL | #[rustc_err]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `tests` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/attribute-typos.rs:4:3
   |
LL | #[tests]
   |   ^^^^^ help: a built-in attribute with a similar name exists: `test`
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `deprcated` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/attribute-typos.rs:1:3
   |
LL | #[deprcated]
   |   ^^^^^^^^^ help: a built-in attribute with a similar name exists: `deprecated`
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
